SF Primes/src/objects/Deal_State__c.object
<CustomObject>
    <fields>
        <fullName>Rush_Reasons__c</fullName>
        <label>Rush Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Client Needs ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installers On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per VP/RGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client is Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCS_Approved_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>SCS Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCS_Approver__c</fullName>
        <label>SCS Approver</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCS_Envelope_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCS Envelope Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQT_Created_By__c</fullName>
        <label>SQT Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Created_Date_Time__c</fullName>
        <label>SQT Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_ID__c</fullName>
        <label>SQT Deal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Link__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp; SQT_Deal_ID__c &amp; &quot;&amp;UID=&quot; &amp; $User.Id, SQT_Deal_ID__c,&quot;_blank&quot;)</formula>
        <label>SQT Deal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Requested__c</fullName>
        <formula>TEXT( 
FLOOR(SQT_Created_Date_Time__c- Deal_Requested_Date__c) 
) &amp; &quot; Day(s), &quot; &amp; 
TEXT( 
ROUND(MOD((SQT_Created_Date_Time__c- Deal_Requested_Date__c)*24,24),0) 
) &amp;&quot; Hour(s), &quot; &amp; 
TEXT( 
ROUND(MOD((SQT_Created_Date_Time__c- Deal_Requested_Date__c)*1440,60),0) 
) &amp;&quot; Minute(s) &quot;</formula>
        <label>SQT - Deal Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Version_Number__c</fullName>
        <label>SQT Deal Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Status__c</fullName>
        <label>SQT Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Discovery</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Sales_Discovery__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Discovery__c</referenceTo>
        <relationshipLabel>Deal State</relationshipLabel>
        <relationshipName>Deal_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_SCS_Notifications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second SCS Notifications</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only add SCS user in Second SCS Notification Field</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>SCS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_To_Client_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Sent To Client Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_Client_RTS__c</fullName>
        <formula>TEXT( 
FLOOR(Send_To_Client_Date__c- Released_to_Sales__c ) 
) &amp; &quot; Day(s), &quot; &amp; 
TEXT( 
ROUND(MOD((Send_To_Client_Date__c- Released_to_Sales__c )*24,24),0) 
) &amp;&quot; Hour(s), &quot; &amp; 
TEXT( 
ROUND(MOD((Send_To_Client_Date__c- Released_to_Sales__c )*1440,60),0) 
) &amp;&quot; Minute(s) &quot;</formula>
        <label>Sent to Client - RTS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceEdge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceEdge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_System_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared System Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer2_Name__c</fullName>
        <label>Shared System Signer2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer2_Signed_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Shared System Signer2 Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer2_Title__c</fullName>
        <label>Shared System Signer2 Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer_Name__c</fullName>
        <label>Shared System Signer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer_Signed_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Shared System Signer Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shared_System_Signer_Title__c</fullName>
        <label>Shared System Signer Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signer1_Sign_on_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client 1 Sign on Paper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signer2_Sign_on_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client 2 Sign on Paper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Design_E_Mailed_to_PSE__c</fullName>
        <label>Solution Design E-Mailed to PSE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Specific_Dealership_Install_Location__c</fullName>
        <inlineHelpText>Please specify dealership area for install, i.e., Business Office, Parts Front Counter, Service Advisor Write Up Station, etc.</inlineHelpText>
        <label>Specific Dealership Install Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TSM_Email__c</fullName>
        <label>TSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technology_Solutions_Manager__c</fullName>
        <formula>Opportunity__r.Account.Technology_Solutions_Manager__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Account.Technology_Solutions_Manager__r.LastName</formula>
        <label>Technology Solutions Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthlies__c</fullName>
        <label>Total Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_One_Times__c</fullName>
        <label>Total One-Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uncompleted_Changes__c</fullName>
        <label>Uncompleted Changes</label>
        <summaryFilterItems>
            <field>Deal_Change__c.Change_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Type_of_Change__c</field>
            <operation>notEqual</operation>
            <value>Network Needed</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Change__c.Deal_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncompleted_Network_Deal_Changes__c</fullName>
        <label>Uncompleted Network Deal Changes</label>
        <summaryFilterItems>
            <field>Deal_Change__c.Type_of_Change__c</field>
            <operation>equals</operation>
            <value>Network Quote Uploaded</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Change_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Change__c.Deal_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncompleted_Rush_Changes__c</fullName>
        <label>Uncompleted Rush Changes</label>
        <summaryFilterItems>
            <field>Deal_Change__c.Rush__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Change_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Type_of_Change__c</field>
            <operation>notEqual</operation>
            <value>Network Needed</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Change__c.Deal_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncompleted_SOW_Deal_Changes__c</fullName>
        <label>Uncompleted SOW Deal Changes</label>
        <summaryFilterItems>
            <field>Deal_Change__c.Type_of_Change__c</field>
            <operation>equals</operation>
            <value>SOW</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Change_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Change__c.Deal_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncompleted_Sales_Deal_Changes__c</fullName>
        <label>Uncompleted Sales Deal Changes</label>
        <summaryFilterItems>
            <field>Deal_Change__c.Type_of_Change__c</field>
            <operation>equals</operation>
            <value>Sales Request-Changes Needed to SQT Deal, Sales Request-Contracts Needed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Change_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Deal_Change__c.Cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Change__c.Deal_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VP_Email__c</fullName>
        <label>VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vehicle_Xchange_Data_Consent_Signer2__c</fullName>
        <label>Vehicle Xchange Data Consent (Signer2)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Xchange_Data_Consent__c</fullName>
        <label>Vehicle Xchange Data Consent (Signer1)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3PA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3PA</label>
        <type>Checkbox</type>
    </fields>
    <label>Deal State</label>
    <listViews>
        <fullName>All_Deals</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Rush__c</columns>
        <columns>SQT_Deal_ID__c</columns>
        <columns>Network_Needed__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>Contract_Needed_By_Date__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>All Deals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CA_Approved_Not_Legal_Countersigned_Yet</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Contract_Number_s__c</columns>
        <columns>Rush__c</columns>
        <columns>Rush_Reasons__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>SQT_Deal_ID__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Send To Countersign</value>
        </filters>
        <label>CA Approved Not Legal Countersigned Yet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Declined</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Rush__c</columns>
        <columns>Rush_Reasons__c</columns>
        <columns>Network_Needed__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>SQT_Deal_ID__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Client Declined</value>
        </filters>
        <label>Client Declined</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_DocuSign_Deals</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Key_DOS__c</columns>
        <columns>Key_Rep__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Contract_Needed_By_Date__c</columns>
        <columns>SQT_Created_Date_Time__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>CA_Approved_Date__c</columns>
        <columns>Legal_Counter_Signer_Date__c</columns>
        <columns>CRA_Signed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Signed by All Parties</value>
        </filters>
        <label>Completed DocuSign Deals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deal_Changes</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Key_Rep__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Rush__c</columns>
        <columns>Uncompleted_Rush_Changes__c</columns>
        <columns>Uncompleted_Network_Deal_Changes__c</columns>
        <columns>Uncompleted_Sales_Deal_Changes__c</columns>
        <columns>Uncompleted_SOW_Deal_Changes__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Uncompleted_Rush_Changes__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Uncompleted_Network_Deal_Changes__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Uncompleted_Sales_Deal_Changes__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Uncompleted_SOW_Deal_Changes__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Deal Changes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deals_with_NW_Quotes_Uploaded_SQT_Deal</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Record_Type__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Rush__c</columns>
        <columns>Contract_Needed_By_Date__c</columns>
        <columns>Network_Needed__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>PSE_Quote_s_Received_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Networking Quote Uploaded</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>SCS Deal State</value>
        </filters>
        <filters>
            <field>SQT_Created_Date_Time__c</field>
            <operation>equals</operation>
        </filters>
        <label>Deals with NW Quotes Uploaded – SQT Deal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Envelope_Voided</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Rush__c</columns>
        <columns>Rush_Reasons__c</columns>
        <columns>Network_Needed__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>SQT_Deal_ID__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Envelope Voided</value>
        </filters>
        <label>Envelope Voided</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Needed_NADA</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Contract_Needed_By_Date__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Rush__c</columns>
        <columns>Rush_Reasons__c</columns>
        <columns>Key_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rush_Reasons__c</field>
            <operation>equals</operation>
            <value>NADA</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>New Deal Arrived</value>
        </filters>
        <label>Needed @ NADA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Contract_Request</fullName>
        <columns>NAME</columns>
        <columns>Account_Region__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Requested_Date__c</columns>
        <columns>Contract_Needed_By_Date__c</columns>
        <columns>Deal_From_Solution_Design__c</columns>
        <columns>Rush__c</columns>
        <columns>Network_Needed__c</columns>
        <columns>Quantity_of_Sites__c</columns>
        <columns>Key_Rep__c</columns>
        <columns>Reprioritized_Needed_By_Date__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>New Deal Arrived</value>
        </filters>
        <label>New Contract Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Canada</fullName>
        <columns>NAME</columns>
        <columns>Key_DOS__c</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Opps Closing This Month - Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Central</fullName>
        <columns>NAME</columns>
        <columns>Key_DOS__c</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Opps Closing This Month - Central</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Enterprise</fullName>
        <columns>NAME</columns>
        <columns>Key_DOS__c</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>Opps Closing This Month - Enterprise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Heavy_Equipmen</fullName>
        <columns>NAME</columns>
        <columns>Key_DOS__c</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>PFW</value>
        </filters>
        <label>Opps Closing This Month - Heavy Equipmen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Hoffman_Sales</fullName>
        <columns>NAME</columns>
        <columns>Key_DOS__c</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>Hoffman Sales</value>
        </filters>
        <label>Opps Closing This Month - Hoffman Sales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month_Inside_Sales</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ADP_Opportunity_Owner_Manager__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Stage_Name__c</columns>
        <columns>Released_to_Sales__c</columns>
        <columns>SQT_Status__c</columns>
        <columns>Docs_Pushed_from_SQT__c</columns>
        <columns>Send_To_Client_Date__c</columns>
        <columns>Client_Signed_Date__c</columns>
        <columns>Finalized_Deal__c</columns>
        <columns>Roll_Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Opportunity_Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2015</value>
        </filters>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>ADP_Opportunity_Owner_Manager__c</field>
            <operation>contains</operation>
            <value>famiano,cook,villareal</value>
        </filters>
        <label>Opps Closing This Month - Inside Sales</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS - {000000}</displayFormat>
        <label>Deal State ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal State</pluralLabel>
    <recordTypes>
        <fullName>Contract_Sigining</fullName>
        <active>true</active>
        <label>Contract Sigining</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_BDC_Check_Opportunity_Change</fullName>
        <active>true</active>
        <description>Created for not allowing  user to change opportunity on deal state once selected</description>
        <errorConditionFormula>AND(ISCHANGED(Opportunity__c), NOT(ISBLANK(Opportunity__c)))</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>You can not change the Opportunity once selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_ContractNeededByDate</fullName>
        <active>true</active>
        <description>Created to verify Contract Needed By Date greater then or equal to current date</description>
        <errorConditionFormula>AND(OR(ISNEW() &amp;&amp; Contract_Needed_By_Date__c &lt; Today(),ISCHANGED(Contract_Needed_By_Date__c) &amp;&amp; Contract_Needed_By_Date__c &lt; Today()),NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)))</errorConditionFormula>
        <errorDisplayField>Contract_Needed_By_Date__c</errorDisplayField>
        <errorMessage>Contract Needed By Date should be greater then or equal to today&apos;s date.</errorMessage>
    </validationRules>
</CustomObject>